top baner replaced

--- a/index.html
+++ b/index.html
@@ -11,25 +11,30 @@
     </style>
     <link rel="stylesheet" href="assignstyle.css">
 </head>
+<img src="images/main-banner.png" height="200" width="1300" alt="">
 
 <body>
     <section class="banner">
+
         <div class="half-width">
-            <h1><span class="orange-color-h1"> Quazi's </span>Food Fest</h1>
-            <h2>Care Your Health, Be Healthy</h2>
-            <h3>header 3 more something</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, unde sed placeat vel soluta iure totam
-                possimus repellat consequuntur sapiente nobis quis ducimus sequi inventore voluptatem ipsa veritatis
-                quod eveniet!. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aut officiis dolor dicta
-                incidunt nam, temporibus qui ipsa quidem rerum inventore, quas, amet in praesentium quos necessitatibus
-                esse reiciendis? Magnam animi cumque ipsa exercitationem, atque tempora omnis molestiae porro quam
-                quod?. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maiores a similique minus, maxime hic
-                doloremque. Exercitationem maxime accusamus atque ducimus expedita fuga iste rem, nemo at cumque! Ullam
-                consequatur laboriosam eius, dolores dolor voluptatum deleniti, quia quasi, maxime nisi molestiae
-                aliquam possimus recusandae unde necessitatibus. Sint veniam obcaecati itaque nemo perspiciatis officia?
-                Pariatur rerum ad placeat possimus illo laudantium quam.
-            </p>
-            <a class="link-button" target="_blank" href="https://en.wikipedia.org/wiki/Breakfast">Explore more..</a>
+            <!-h1><span class="orange-color-h1"> </span></h1!--!>
+
+                <h1><span class="orange-color-h1">Care Your Health,</span> Be Healthy</h1>
+                <p>Help inspire your child to be eat healthy, explore new foods and practice a healthy lifestyle with
+                    this
+                    high-quality food journal/diary for kids!
+                    This healthy food/ dietary workbook for Kids features
+
+                    50+ pages of journaling paper that include the journaling prompts: “Today My Healthy Choices Were…”,
+                    “Today I Drank__ Glasses Of Water” as well as a “Daily Food Groups Scale” and A Place to Record the
+                    “New
+                    Foods” of Each Day.
+                    Full-color soft Glossy cover with the quote “My Food Journal”
+                    Classic sized 8.5″x11″ kids food journal — the perfect size to put in backpacks or keep on your
+                    child’s
+                    bedside table
+                </p>
+                <a class="link-button" target="_blank" href="https://en.wikipedia.org/wiki/Breakfast">Explore more..</a>
         </div>
 
         <div class="half-width"><img src="images/boy-brkfst1.png" alt="Healthy-Breakfast"></div>
@@ -43,19 +48,16 @@
 
         <div class="half-width">
 
-            <h1>Destination</h1>
-            <h2>Become a Full-Stack Web Devloper</h2>
+            <h1><span class="orange-color-h1">Coloring Life,</span>With Health</h1>
+            <h2>Become a Inspiration For family</h2>
 
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur ad neque praesentium odit unde
-                maiores quisquam, est, voluptatum sed autem porro in repellat. Recusandae maxime quisquam ratione odio,
-                eum est? Blanditiis numquam labore saepe natus tempora. Iure tempore exercitationem veritatis
-                cupiditate, minus quis recusandae est aperiam cum dolor magnam suscipit magni quasi voluptate? Nesciunt
-                excepturi unde aliquam id mollitia deleniti iste iure quas architecto, praesentium dignissimos itaque
-                accusantium. Earum exercitationem autem inventore consequuntur fuga rem aliquid iure voluptatem
-                laudantium, ratione deserunt eos itaque, aspernatur fugit, cum adipisci corporis sunt temporibus
-                consequatur minus molestiae? Nihil similique voluptatibus quae veniam eveniet voluptate.
-
+                Packed with 30 Food Coloring Pages!
+                Children’s Diet & Nutrition Education SHOULD START EARLY – Exposing kids to healthy food, and healthy
+                children’s diet habits. If you decided your family should eat a healthy diet, this book can be great way
+                to talk about it while coloring healthy food dishes.
+                In this book there are – No JUNK FOOD, NO SODA CANS, NO CANDY, NO SNACKS. Only real food and healthy
+                eating Quotes.
             </p>
             <a class="link-button" target="_blank" href="https://en.wikipedia.org/wiki/Healthy_diet">Explore More</a>
         </div>
@@ -69,20 +71,37 @@
                 <h2>Recepie One </h2>
                 <img class="half-width img" src="images/healthy-food-veriety.png" height=" 200px" alt="Recepie3">
                 <h3 class="orange-color">Healthy-Seafood idea</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti inventore ipsa aliquid minima,
-                    voluptatum maiores labore rem consequatur. Et molestias deserunt dolorem nihil in veniam molestiae
-                    est veritatis sint, dignissimos repellendus rem vel dolore, amet ullam dolorum voluptas? Ullam,
-                    neque.</p>
+                <p> 8 Steps Beginners Should Take Before Trying the Keto Diet
+
+                    It depends on which version of keto you’re doing, but generally, you’ll aim to get 5 to 10 percent
+                    of your total calories from carbs on the diet. The goal is to consume only 20 to 50 grams (g) of net
+                    carbs per day — or less than the equivalent of ½ cup of long-grain brown rice, which contains 25 g
+                    of total carbs (and about 23 g net carbs), according to the U.S. Department of Agriculture (USDA).
+                <h3>US. Food Journal</h3>
+                <p> Net carbs, which are an unofficial term, are defined as total carbs minus fiber and sugar alcohols,
+                    according to the website for the Atkins diet, another low-carb plan. For most people, going that low
+                    won’t be easy:</p>
+
             </div>
             <div id="web-experience2" class=" experience-area">
                 <h2>Recipe Two</h2>
                 <img src="images/healthy-food-veriety2.png" height="200px" alt="Recepie3">
                 <h3 class="orange-color">Seafood-Veg. Salaad Combination</h3>
 
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium consequatur dolores ipsum
-                    repellendus commodi et enim quia hic exercitationem, inventore iste aut, velit accusamus tenetur
-                    est! Nemo, totam quam facilis et soluta laudantium iste reiciendis illo, odio voluptatibus, nam
-                    sunt!</p>
+                <p>When cooking with heart health in mind, portion sizes are just as important as ingredients. This
+                    heart healthy cookbook saves you the guesswork of what and how much to eat with perfectly portioned
+                    recipes.
+                    In this cookbook you will learn:
+
+                    Breakfasts, Poultry, Beef, Fish and Seafood, Vegetarian,
+                    Soups and Stews, Chilies, Salads,</p>>
+
+                <h3>Side Dishes</h3>
+                <p>Potatoes, Pasta, Rice, and Other Grains
+                    Quick Breads, Yeast Breads, Cookies, Fruit Desserts,
+                    Grain, Nut, and Legume Desserts,
+                    Sauces, Condiments, Mixes, and Spice Blends
+                    Don’t wait another second to get this life-changing book. Start Eating Healthy and Tasty Meals!</p>
 
             </div>
             <div id="web-experience3" class=" experience-area">
@@ -90,10 +109,14 @@
                 <img src="images/healthy-food.jpg" height="200px" alt="Recepie3">
                 <h3 class="orange-color">Balanced Nutration</h3>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui, nisi earum dolorem
-                    nihil
-                    quibusdam dolorum temporibus animi optio sint cumque omnis quae non? Eaque hic amet
-                    ratione in asperiores a, esse harum consectetur dolores commodi ipsam tempora fugiat odio?
+                <p>NO MESSY COLORING – With This Book you get one coloring page per sheet, so your kids can use their
+                    crayons, pens, colored pencils or markers without the colors bleeding into the other sketch.
+                    This HEALTHY FOOD Coloring Book for Kids is perfect for young ages boys and girls. Coloring book for
+                    kindergarten 4-6, or school children 6-8. and even older kids 8+.
+                <h3>Coloring Food Books for Kids </h3>
+                This book is a coloring book, not an advise book. For personal advice or assistance for diet related
+                health issues, you should seek professional medical advice from your General Practitioner or
+                Accredited Practicing Dietitian. This book is not a vegan or vegetarian oriented book.
                 </p>
 
             </div>
@@ -101,9 +124,6 @@
     </section>
     <section>
         <div>
-            <h1>
-                <p>id="footer-p"</p>
-            </h1>
             <h2><span>Care Your Health, Be Healthy</span> </h2>
         </div>
     </section>
