baner adjusted & footer edited

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </style>
     <link rel="stylesheet" href="assignstyle.css">
 </head>
-<img src="images/main-banner.png" height="200" width="1300" alt="">
+<img class="full-width" src="images/main-banner.png" height="200" width="1300" alt="">
 
 <body>
     <section class="banner">
@@ -124,6 +124,17 @@
     </section>
     <section>
         <div>
+            <h1>
+                <p>
+                    @All right preserved "Quazi's Food Chamber" 2024 Chittagong
+
+                </p>
+            </h1>
+        </div>
+    </section>
+
+    <section>
+        <div>
             <h2><span>Care Your Health, Be Healthy</span> </h2>
         </div>
     </section>
@@ -137,7 +148,7 @@
 
                 <a class="button" target="_blank" href="https://thezamansblog.com/Contact.php">About Us</a>
 
-                <h3> @All right preserved "Quazi's Food Chamber" 2024 Chittagong</h3>
+
             </footer>
         </div>
 
