Checked before submition

--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="assignstyle.css">
 </head>
 <img class="full-width" src="images/main-banner.png" height="200" width="1300" alt="">
+<div>
+    <a class="button-top" target="_blank" href="https://muhammad-towhiduzzaman.github.io/qmtzs-food-fest/">Home</a>
+
+    <a class="button-top" target="_blank" href="https://healtportalblog.com">Recipes</a>
+
+    <a class="button-top" target="_blank" href="https://healtportalblog.com">Blog</a>
+
+
+</div>
 
 <body>
     <section class="banner">
@@ -69,7 +78,7 @@
         <div class="flaxible">
             <div id="web-experience1" class="experience-area">
                 <h2>Recepie One </h2>
-                <img class="half-width img" src="images/healthy-food-veriety.png" height=" 200px" alt="Recepie3">
+                <img class="half-width img" src="images/Project Cover1.jpg" height="180px" width="250px" alt="Recepie3">
                 <h3 class="orange-color">Healthy-Seafood idea</h3>
                 <p> 8 Steps Beginners Should Take Before Trying the Keto Diet
 
@@ -85,7 +94,7 @@
             </div>
             <div id="web-experience2" class=" experience-area">
                 <h2>Recipe Two</h2>
-                <img src="images/healthy-food-veriety2.png" height="200px" alt="Recepie3">
+                <img src="images/Project Cover.png" height="200px" alt="Recepie3">
                 <h3 class="orange-color">Seafood-Veg. Salaad Combination</h3>
 
                 <p>When cooking with heart health in mind, portion sizes are just as important as ingredients. This
@@ -106,7 +115,7 @@
             </div>
             <div id="web-experience3" class=" experience-area">
                 <h2>Recepie Three</h2>
-                <img src="images/healthy-food.jpg" height="200px" alt="Recepie3">
+                <img src="images/Project Cover.jpg" height="200px" alt="Recepie3">
                 <h3 class="orange-color">Balanced Nutration</h3>
 
                 <p>NO MESSY COLORING – With This Book you get one coloring page per sheet, so your kids can use their
